--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My second github repo</title>
 </head>
 <body>
-    
+    <h1>I can push to github</h1>
+    <h2> i can create webpage now</h2>
 </body>
 </html>
