--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>I can push to github</h1>
     <h2> i can create webpage now</h2>
+    <h3>new code testing</h3>
+    <p>more psknbbdlnnkncklkkknklbcnkn more psknbbdlnnkncklkkknklbcnkn more psknbbdlnnkncklkkknklbcnkn more psknbbdlnnkncklkkknklbcnkn</p>
+    <p>jnknkeinkcewknweinkedwkionckcjcl</p>
 </body>
 </html>
