--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p>jnknkeinkcewknweinkedwkionckcjcl</p>
     <h3>my tnd ndjhkjljhcxozjsoi</h3>
     <h4>ikjkjkpok;lkl;jk</h4>
+    <img src="pic-300x300.jpg" alt="amr pic">
     
 </body>
 
