new lekha added

--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     <h1>I can push to github</h1>
     <h2> i can create webpage now</h2>
     <h3>new code testing</h3>
+    <h5>look mama i can write ablog</h5>
     <p>more psknbbdlnnkncklkkknklbcnkn more psknbbdlnnkncklkkknklbcnkn more psknbbdlnnkncklkkknklbcnkn more psknbbdlnnkncklkkknklbcnkn</p>
     <p>jnknkeinkcewknweinkedwkionckcjcl</p>
     <h3>my tnd ndjhkjljhcxozjsoi</h3>
     <h4>ikjkjkpok;lkl;jk</h4>
+    <div>
+        <h3>new blog</h3>
+        <p>lorem ipuonnnjnbjibnjnjbinnklxc jc juiinj  jj</p>
+    </div>
     <img src="pic-300x300.jpg" alt="amr pic">
     
 </body>
